add office/excel
fix equal dreamlu
optimize tag parse