@@ -18,7 +18,8 @@ require (
 	golang.org/x/text v0.9.0
 	gopkg.in/yaml.v3 v3.0.1
 	gorm.io/driver/mysql v1.3.2
-	gorm.io/gorm v1.25.0
+	gorm.io/driver/postgres v1.5.2
+	gorm.io/gorm v1.25.3
 )
 
 require (
@@ -104,5 +105,4 @@ require (
 	google.golang.org/grpc v1.52.0 // indirect
 	google.golang.org/protobuf v1.28.1 // indirect
 	gopkg.in/ini.v1 v1.67.0 // indirect
-	gorm.io/driver/postgres v1.5.2 // indirect
 )
